# deep_cyber

./: CMakeLists.txt  LICENSE  README.md  cifar10_data.c  cifar10_data.h  main.c
cifar10/: c1b.c  c1w.c  c2b.c  c2w.c  c3b.c  c3w.c  c4b.c  cifar10.c  cifar10.h  cifar10_weights.h  d1b.c  d2b.c  d2w.c
include/: conv2d.h  convolutional_layer.h  deep_cyber.h  deep_shit.h  int.h  matrix.h  tensor.h
prototype/: Untitled.ipynb  Untitled1.ipynb  c1b.npy  c1w.npy  c2b.npy  c2w.npy  c3b.npy  c3w.npy  c4b.npy  c4w.npy  cifar10_converter.py  cifar10_native_minimal_interface.ipynb  converter.py  d1b.npy  d1w.npy  d2b.npy  d2w.npy  deep_cyber.py  exp_prototype.ipynb  function_tests.ipynb  native_function_test.ipynb
src/: activation.c  conv2d.c  convolutional_layer.c  dense.c  matrix.c  pooling.c  tensor.c
test/: testmain.cpp
